Bug 404232 - Dolphin is being resized by KMessageWidget
Summary: Dolphin is being resized by KMessageWidget
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-12 11:10 UTC by Viorel-Cătălin Răpițeanu
Modified: 2019-02-24 15:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.56
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Viorel-Cătălin Răpițeanu 2019-02-12 11:10:07 UTC
SUMMARY
The Dolphin window (as well as the elements inside the window) are being resized when a large notification/warning/error is being displayed

STEPS TO REPRODUCE
1. Try to create an invalid file, like a textfile with 300 characters name

OBSERVED RESULT
When the error is being displayed, dolphin's window width is resized to contain the whole with of the error message.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.14.90
KDE Frameworks Version: master
Dolphin Version: master
Qt Version: 5.12.1

ADDITIONAL INFORMATION
Video of the issue:
https://drive.google.com/file/d/1Jqh2rJfbKPiMfrc6XD6_0f-Vz5yy3h_7/view
Comment 1 Nate Graham 2019-02-12 17:15:42 UTC
Ew, that's gross. Can confirm.
Comment 2 Nate Graham 2019-02-12 21:35:43 UTC
Mostly-but-not-quite-there patch: https://phabricator.kde.org/D18968
Comment 3 Nate Graham 2019-02-17 21:07:40 UTC
Git commit cf2da56c5e76c168ffdcdf7e2bbbf3ae4f924f55 by Nate Graham.
Committed on 17/02/2019 at 21:07.
Pushed by ngraham into branch 'Applications/18.12'.

Word-wrap KMessageWidget text

Summary:
Word-wrap KMessageWidget text to prevent the window from being widened
when the text is very long.

Only `CCBUG: ` because word wrap only works where QLabel detects a word boundary;
it will not wrap a string with no spaces or other word boundaries (e.g.
"aaaaaaaaaaaaaaaaaaaa...")

Test Plan:
- Create a new text file with a 300-character name that has spaces in it
- In the KMessageWidget's error message, the file name is wrapped at the word
boundaries

Reviewers: #dolphin, #frameworks, cfeck, elvisangelaccio

Reviewed By: #dolphin, cfeck, elvisangelaccio

Subscribers: elvisangelaccio, cfeck, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D18968

M  +4    -0    src/dolphinviewcontainer.cpp

https://commits.kde.org/dolphin/cf2da56c5e76c168ffdcdf7e2bbbf3ae4f924f55
Comment 4 Nate Graham 2019-02-24 15:38:09 UTC
Git commit d996ee0a4453f39726847bd60951c60a2b30194d by Nate Graham.
Committed on 24/02/2019 at 15:38.
Pushed by ngraham into branch 'master'.

Middle-elide very long filenames in error strings

Summary:
Middle-elide very long filenames used in error strings to prevent broken layouts.

See the fixed bug for one such example.
FIXED-IN: 5.56

Test Plan:
In Dolphin, create a new file named
"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"

{F6620295, size=full}

Reviewers: #frameworks, #dolphin, elvisangelaccio

Reviewed By: #dolphin, elvisangelaccio

Subscribers: elvisangelaccio, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D19103

M  +9    -5    src/core/job_error.cpp

https://commits.kde.org/kio/d996ee0a4453f39726847bd60951c60a2b30194d